@@ -3,7 +3,6 @@ SUBDIRS = activity clipboard graphics objects presence datastore
 sugardir = $(pythondir)/sugar
 sugar_PYTHON =		\
 	__init__.py	\
-	date.py		\
 	env.py		\
 	logger.py	\
         ltihooks.py	\
