@@ -1,30 +1,0 @@
-# Copyright (C) 2007, Red Hat, Inc.
-#
-# This library is free software; you can redistribute it and/or
-# modify it under the terms of the GNU Lesser General Public
-# License as published by the Free Software Foundation; either
-# version 2 of the License, or (at your option) any later version.
-#
-# This library is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
-# Lesser General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public
-# License along with this library; if not, write to the
-# Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-# Boston, MA 02111-1307, USA.
-
-import datetime
-import unittest
-
-from sugar.date import Date
-
-class TestDate(unittest.TestCase):
-    def test_today(self):
-        date = Date(datetime.date(2000, 1, 1))
-        date._today = datetime.date(2000, 1, 1)
-        self.assertEqual(str(date), 'Today')
-
-if __name__ == "__main__":
-    unittest.main()
