@@ -1,3 +1,5 @@
+* #2896: Remove sugar.date module. (tomeu)
+
 Snapshot 0b3f687749
 
 * #3088: Fix style of zoom buttons palettes. (marco)
